updated mod list

--- a/sites/vrlfp.net/about.html
+++ b/sites/vrlfp.net/about.html
@@ -23,4 +23,4 @@
 </a></div>
 </div>
 
-<br /><p class="center">Moderators: Automatic Kitten, DICEBlOCK, relliken, spice_meme_gud_yes</p>
+<br /><p class="center">Moderators: Automatic Kitten, <a href="/user/DICEBlOCK">DICEBlOCK</a>, <a href="/user/relliken">relliken</a>, <a href="/user/ExtraSpicyMeat">ExtraSpicyMeat</a>, z00f, Zapstone456</p>
