--- a/sites/vrlfp.net/about.html
+++ b/sites/vrlfp.net/about.html
@@ -1,6 +1,8 @@
 <h1>About Us</h1>
 
-<p>Welcome to VRLFP, where <em>your</em> needs come first. We strive to provide you with a wonderful experience, whether you’re here to date, hook up, or something else. We won’t judge. We hope to provide an easy, comfortable, and powerful interface for all of your browsing needs.</p>
+<p>Welcome to VRLFP, where <em>your</em> needs come first. This is a community for people interested in dating, hookups, friendship, and/or roleplaying in virtual reality. Most of our users play VRChat, but we're not going to stop you from meeting up in other VR games or IRL &mdash; we'd love to hear about your experiences dating in other games!</p>
+
+<p>We strive to provide you with a wonderful experience, regardless of what you're looking for &mdash; we won’t judge. We hope to provide an easy, comfortable, and powerful interface for all of your browsing needs.</p>
 
 <p>Notice we’re missing a gender, sexuality, or other profile option that you want to use on the site? <a href="mailto:suggestions@vrlfp.net" rel="nofollow">Email us</a> with the name and a brief description so we can help get you in on all the action!</p>
 
@@ -11,16 +13,28 @@
 <h2>The Team</h2>
 
 <div class="row">
-<div class="col-6 center"><a href="/user/kfarwell">
-    <img src="/img/kfarwell.png" style="width: 100%" /><br />
-    <h6>kfarwell</h6>
-    Co-founder
-</a></div>
-<div class="col-6 center"><a href="/user/QEKKIT">
-    <img src="/img/qekkit.png" style="width: calc(100% - 20px)" /><br />
-    <h6>QEKKIT</h6>
-    Co-founder
-</a></div>
+    <div class="col-6 center"><a href="/user/kfarwell">
+        <img src="/img/kfarwell.png" style="width: 100%" /><br />
+        <h6>kfarwell</h6>
+        Co-founder & CEO
+    </a></div>
+    <div class="col-6 center"><a href="/user/QEKKIT">
+        <img src="/img/qekkit.png" style="width: calc(100% - 20px)" /><br />
+        <h6>QEKKIT</h6>
+        Co-founder & CEO
+    </a></div>
+</div><br /><br />
+<div class="row">
+    <div class="col-6 center"><a href="/user/fireTwoOneNine">
+        <img src="/img/firetwoonenine.png" style="width: 100%" /><br />
+        <h6>fireTwoOneNine</h6>
+        Head Moderator
+    </a></div>
+    <div class="col-6 center"><strong>
+        <img src="/img/thatastronautguy.png" style="width: calc(100% - 20px)" /><br />
+        <h6>ThatAstronautGuy</h6>
+        Developer
+    </strong></div>
 </div>
 
-<br /><p class="center">Moderators: Automatic Kitten, <a href="/user/DICEBlOCK">DICEBlOCK</a>, <a href="/user/relliken">relliken</a>, <a href="/user/ExtraSpicyMeat">ExtraSpicyMeat</a>, z00f, Zapstone456</p>
+<br /><p class="center">Moderators: <a href="/user/Aurora_Dazzle">Aurora_Dazzle</a>, <a href="/user/Crowii">Crowii</a>, <a href="/user/Slik">Slik</a>, <a href="/user/Wolf5150">Wolf5150</a></p>
