updated mod list

--- a/sites/vrlfp.net/about.html
+++ b/sites/vrlfp.net/about.html
@@ -37,4 +37,4 @@
     </strong></div>
 </div>
 
-<br /><p class="center">Moderators: <a href="/user/Aurora_Dazzle">Aurora_Dazzle</a>, <a href="/user/Crowii">Crowii</a>, <a href="/user/Slik">Slik</a>, <a href="/user/Wolf5150">Wolf5150</a></p>
+<br /><p class="center">Moderators: <a href="/user/Aurora_Dazzle">Aurora_Dazzle</a>, <a href="/user/Crowii">Crowii</a>, <a href="/user/DICEBlOCK">DICEBlOCK</a>, <a href="/user/Slik">Slik</a></p>
